# cpp

./: .gitignore  CMakeLists.txt  README.md  class.py  init.vim  tags
c00/ex00/: Makefile  a.out  megaphone.cpp
c00/ex01/: Contact.class.hpp  Contact.cpp  Contact.hpp  Contact_Getters.cpp  Contact_IsValid.cpp  Contact_Setters.cpp  Contact_Trunc.cpp  Makefile  PhoneBook  PhoneBook.class.hpp  PhoneBook.cpp  PhoneBook.hpp  PhoneBook_Add.cpp  PhoneBook_IsNumber.cpp  README.md  a.out  main.cpp  phone.h  test.cpp
c00/ex02/: Account.cpp  CMakeLists.txt  README.md  account  main.cpp
cpp00/ex00/: Makefile  README.md  megaphone  megaphone.cpp
cpp00/ex01/: Contact.cpp  Contact.hpp  Contact_Getters.cpp  Contact_IsValid.cpp  Contact_Trunc.cpp  Makefile  PhoneBook.cpp  PhoneBook.hpp  PhoneBook_Add.cpp  PhoneBook_IsNumber.cpp  PhoneBook_eraseWhiteSpaces.cpp  README.md  main.cpp
cpp00/ex02/: Account.cpp  Makefile  README.md
cpp01/ex00/: BraiiiiiiinnnzzzZ...  Makefile  README.md  Zombie.cpp  Zombie.h  Zombie.hpp  main.cpp  newZombie.cpp  prog  randomChump.cpp
cpp01/ex01/: Makefile  Moar_brainz!  README.md  Zombie.cpp  Zombie.h  main.cpp  zombieHorde.cpp
cpp01/ex02/: Makefile  README.md  main.cpp
cpp01/ex03/: HumanA.cpp  HumanA.h  HumanA.hpp  HumanB.cpp  HumanB.h  HumanB.hpp  Makefile  README.md  Weapon.hpp  main.cpp
cpp01/ex04/: Makefile  README.md  main.cpp  prog
cpp01/ex05/: Harl.cpp  Makefile  README.md  main.cpp
cpp01/ex06/: Harl.cpp  Makefile  README.md
cpp02/ex00/: Fixed.cpp  Fixed.hpp  README.md  main.cpp  prog
cpp02/ex01/: Fixed.cpp  Fixed.hpp  README.md  (+3 more)
(+421 files in other folders)
